# Analysis-NDT-and-TEASER

./: README.md
MATLAB/: README.md  ndt.m  teaser.m
NDT/: CMakeLists.txt  README.md  main.cpp  normal_distributions_transform.cpp  normal_distributions_transform.h
record3pcd/: 1637535733.960749000.pcd  1637535750.501887000.pcd
record3test/: 1637535634.411389000.pcd  1637535759.680210000.pcd  1637535760.587973000.pcd
